--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@
 	line-height: normal;
   }
 
-  .pet-marketplace .brands-logo {
+  .pet-marketplace .logomarca {
 	display: flex;
 	width: 1734px;
 	align-items: center;
@@ -345,7 +345,7 @@
 	object-fit: cover;
   }
   
-  .pet-marketplace .overlap-group {
+  .pet-marketplace .sobreposicao-group {
 	position: absolute;
 	width: 1735px;
 	height: 3345px;
@@ -361,11 +361,142 @@
 	left: 0;
   }
   
-  .pet-marketplace .overlap-group-2 {
+  .pet-marketplace .sobreposicao-group-2 {
 	position: relative;
 	width: 1728px;
 	height: 661px;
 	background-image: url(https://c.animaapp.com/f11aBe7U/img/rectangle-4.png);
 	background-size: cover;
 	background-position: 50% 50%;
+  }
+
+  .pet-marketplace .atualizacao {
+	position: absolute;
+	top: 235px;
+	left: 519px;
+	font-family: "Open Sans", Helvetica;
+	font-weight: 600;
+	color: var(--button);
+	font-size: 32px;
+	text-align: center;
+	letter-spacing: -2.4px;
+	line-height: normal;
+  }
+  
+  .pet-marketplace .text-wrapp-5 {
+	position: absolute;
+	top: 123px;
+	left: 391px;
+	font-family: "Poppins", Helvetica;
+	font-weight: 600;
+	color: var(--headline);
+	font-size: 74.9px;
+	letter-spacing: -1.5px;
+	line-height: normal;
+  }
+  
+  .pet-marketplace .div-wrapp {
+	all: unset;
+	box-sizing: border-box;
+	display: flex;
+	width: 205px;
+	height: 61px;
+	gap: 10px;
+	padding: 8px 24px;
+	position: absolute;
+	top: 468px;
+	left: 792px;
+	background-color: var(--foundation-orangenormal);
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .pet-marketplace .search-section-2 {
+	display: flex;
+	width: 757px;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	padding: 24px 10px 24px 24px;
+	position: absolute;
+	top: 349px;
+	left: 516px;
+	border: 2px solid;
+	border-color: var(--foundation-orangenormal);
+  }
+
+  .pet-marketplace .text-wrapp-6 {
+	position: relative;
+	width: fit-content;
+	margin-top: -2px;
+	font-family: "Poppins", Helvetica;
+	font-weight: 600;
+	color: #ffffff4f;
+	font-size: 28px;
+	letter-spacing: -2.1px;
+	line-height: normal;
+  }
+  
+  .pet-marketplace .ultimos-produtos {
+	position: absolute;
+	width: 1735px;
+	height: 1705px;
+	top: 442px;
+	left: 0;
+	background-color: #1b1c1d;
+  }
+  
+  .pet-marketplace .text-wrapp-7 {
+	position: absolute;
+	top: 54px;
+	left: 681px;
+	font-family: "Poppins", Helvetica;
+	font-weight: 500;
+	color: var(--headline);
+	font-size: 50px;
+	letter-spacing: -1px;
+	line-height: normal;
+  }
+  
+  .pet-marketplace .bts-2 {
+	display: inline-flex;
+	gap: 17.85px;
+	padding: 14.28px 42.84px;
+	position: absolute;
+	top: 1543px;
+	left: 758px;
+	border: 2.68px solid;
+	border-color: var(--foundation-orangenormal);
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .pet-marketplace .ellipse {
+	position: absolute;
+	width: 263px;
+	height: 263px;
+	top: 170px;
+	left: 430px;
+	background-color: #d9d9d991;
+	border-radius: 131.5px;
+	box-shadow: 0px 4px 4px #00000040;
+  }
+  
+  .pet-marketplace .frame-2 {
+	position: absolute;
+	width: 1735px;
+	height: 444px;
+	top: 0;
+	left: 0;
+	background-color: #0b0611b8;
+	backdrop-filter: blur(120px) brightness(100%);
+	-webkit-backdrop-filter: blur(120px) brightness(100%);
+  }
+  
+  .pet-marketplace .discount {
+	position: absolute;
+	width: 578px;
+	height: 355px;
+	top: 89px;
+	left: 0;
   }
