--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .pet-marketplace {
 	background-color: #010204;
 	display: flex;
@@ -372,7 +373,7 @@
   .pet-marketplace .get-updated-with {
 	position: absolute;
 	top: 235px;
-	left: 519px;
+	left: 350px;
 	font-family: "Open Sans", Helvetica;
 	font-weight: 600;
 	color: var(--button);
@@ -419,12 +420,13 @@
 	padding: 24px 10px 24px 24px;
 	position: absolute;
 	top: 349px;
-	left: 516px;
+	left: 490px;
 	border: 2px solid;
 	border-color: var(--foundation-orangenormal);
   }
   
   .pet-marketplace .text-wrapper-6 {
+	text-align: center;
 	position: relative;
 	width: fit-content;
 	margin-top: -2px;
@@ -511,7 +513,7 @@
   .pet-marketplace .text-wrapper-8 {
 	position: absolute;
 	top: 0;
-	left: 316px;
+	left: 2px;
 	font-family: "Poppins", Helvetica;
 	font-weight: 500;
 	color: #ffffff;
@@ -527,7 +529,7 @@
 	font-family: "Poppins", Helvetica;
 	font-weight: 700;
 	color: #d9d9d9;
-	font-size: 149.4px;
+	font-size: 132px;
 	letter-spacing: -2.99px;
 	line-height: normal;
   }
@@ -539,7 +541,7 @@
 	font-family: "Poppins", Helvetica;
 	font-weight: 500;
 	color: #ffffff;
-	font-size: 28px;
+	font-size: 25px;
 	text-align: center;
 	letter-spacing: 0;
 	line-height: normal;
