--- a/style.css
+++ b/style.css
@@ -790,7 +790,7 @@
   
   .pet-marketplace .rectangle-3 {
 	position: fixed;
-	width: 1774px;
+	width: 100%;
 	height: 238px;
 	top: -22px;
 	left: -23px;
@@ -804,7 +804,7 @@
   
   .pet-marketplace .top-navigation-bar {
 	display: flex;
-	width: 1607px;
+	width: 100%;
 	align-items: center;
 	gap: 205px;
 	position: fixed;
